Add validation to ImageRequest and update API usage
Added validation logic for input parameters in ImageRequest constructor to ensure compliance with certain requirements. The chat model in ServiceDemo was changed to "gpt-4-turbo" and the HTTP client is now closed properly after use. The roles of sender and receiver were corrected in WhisperTutorial.