@@ -22,22 +22,23 @@ public class ServiceDemo {
                 .registerTypeAdapter(Role.class, new LowercaseEnumSerializer())
                 .create();
 
-        ChatRequest chatRequest = new ChatRequest("gpt-3.5-turbo",
+        ChatRequest chatRequest = new ChatRequest("gpt-4-turbo",
                 List.of(new Message(Role.USER, "Say this is a test!")),
                 0.7);
         System.out.println(chatRequest);
         System.out.println(gson.toJson(chatRequest));
 
         HttpResponse<String> response;
-        HttpClient client = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create("https://api.openai.com/v1/chat/completions"))
-                .header("Authorization", "Bearer %s".formatted(System.getenv("OPENAI_API_KEY")))
-                .header("Content-Type", "application/json")
-                .header("Accept", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(gson.toJson(chatRequest)))
-                .build();
-        response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        try (HttpClient client = HttpClient.newHttpClient()) {
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create("https://api.openai.com/v1/chat/completions"))
+                    .header("Authorization", "Bearer %s".formatted(System.getenv("OPENAI_API_KEY")))
+                    .header("Content-Type", "application/json")
+                    .header("Accept", "application/json")
+                    .POST(HttpRequest.BodyPublishers.ofString(gson.toJson(chatRequest)))
+                    .build();
+            response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        }
         System.out.println(response.statusCode());
         String body = response.body();
         System.out.println(body);
@@ -45,9 +46,6 @@ public class ServiceDemo {
         ChatResponse chatResponse = gson.fromJson(body, ChatResponse.class);
         System.out.println(chatResponse);
         System.out.println(chatResponse.usage());
-        System.out.println(chatResponse.choices()
-                .get(0)
-                .message()
-                .content());
+        System.out.println(chatResponse.choices().getFirst().message().content());
     }
 }
